<resources>
    <string name="app_name">Android1: Урок 1. Задание №2</string>
    <string name="phone">Номер телефона</string>
    <string name="textPersonName">Имя</string>
    <string name="textPassword">Пароль</string>
    <string name="textEmailAddress">Электронная почта</string>
    <string name="name">Введите Имя</string>
    <string name="age">Возраст</string>
    <string name="main_btn">Регистрация</string>
</resources>